--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=34,49
+Pos=808,243
 Size=1075,1048
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Console]
 Pos=1151,333
@@ -46,7 +46,7 @@ DockId=0x00000009,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1017
+Size=1280,740
 Collapsed=0
 
 [Window][Window Size]
@@ -81,8 +81,8 @@ Size=310,714
 Collapsed=0
 
 [Window][Application Statistics]
-Pos=0,833
-Size=1501,184
+Pos=0,606
+Size=1000,134
 Collapsed=0
 DockId=0x00000002,0
 
@@ -99,20 +99,20 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Inspector]
-Pos=1503,511
-Size=417,506
+Pos=1002,372
+Size=278,368
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Heirarchy]
-Pos=1503,0
-Size=417,509
+Pos=1002,0
+Size=278,370
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][World Settings]
-Pos=1503,511
-Size=417,506
+Pos=1002,372
+Size=278,368
 Collapsed=0
 DockId=0x0000000D,1
 
@@ -128,13 +128,23 @@ Size=165,99
 Collapsed=0
 
 [Window][UI Config]
-Pos=7,13
+Pos=6,8
 Size=193,69
-Collapsed=0
+Collapsed=1
 
 [Window][OpenCV]
 Pos=1260,489
 Size=652,534
+Collapsed=0
+
+[Window][OpenCV Controls]
+Pos=92,219
+Size=574,205
+Collapsed=0
+
+[Window][Tracking Controls]
+Pos=27,10
+Size=387,332
 Collapsed=0
 
 [Docking][Data]
@@ -143,7 +153,7 @@ DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode      ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
     DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
     DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1017 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1000,740 Split=Y
     DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,604 Split=Y
       DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
