--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -8,9 +8,10 @@ Size=1280,740
 Collapsed=0
 
 [Window][Light]
-Pos=537,410
-Size=1280,740
-Collapsed=1
+Pos=0,19
+Size=236,596
+Collapsed=0
+DockId=0x00000007,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -18,14 +19,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1015,317
-Size=265,298
+Pos=1026,317
+Size=254,298
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Heirarchy]
-Pos=1015,19
-Size=265,296
+Pos=1026,19
+Size=254,296
 Collapsed=0
 DockId=0x00000005,0
 
@@ -36,8 +37,8 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
-Pos=755,119
-Size=550,329
+Pos=362,14
+Size=866,585
 Collapsed=0
 
 [Window][Asset System]
@@ -47,11 +48,13 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace       ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y Selected=0x3F488DE8
-  DockNode      ID=0x00000004 Parent=0xD9E1F891 SizeRef=1280,596 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1013,721 CentralNode=1
-    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=265,721 Split=Y Selected=0xE884D536
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=182,296 Selected=0xE884D536
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=182,298 Selected=0xF02CD328
-  DockNode      ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,123 Selected=0x24DDE09A
+DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y Selected=0x3F488DE8
+  DockNode        ID=0x00000004 Parent=0xD9E1F891 SizeRef=1280,596 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=236,721 Selected=0xAADB73F3
+    DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=1042,721 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=786,721 CentralNode=1
+      DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=254,721 Split=Y Selected=0xE884D536
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=182,296 Selected=0xE884D536
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=182,298 Selected=0xF02CD328
+  DockNode        ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,123 Selected=0x3F488DE8
 
