--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -34,7 +34,7 @@ DockId=0x00000005,0
 Pos=0,603
 Size=1280,137
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][Dear ImGui Demo]
 Pos=362,14
@@ -45,7 +45,12 @@ Collapsed=0
 Pos=0,603
 Size=1280,137
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
+
+[Window][Bullet Physics Debug Colours]
+Pos=305,23
+Size=261,572
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
