Fixed not rendering selection gizmo when editor disabled. Changed world object ot actor, too verbose

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -137,13 +137,15 @@
     <ClInclude Include="Source\Flow\GameFramework\Components\RenderableComponent.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\StaticMeshComponent.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\WorldComponent.h" />
-    <ClInclude Include="Source\Flow\GameFramework\ControlledObject.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Pawn.h" />
     <ClInclude Include="Source\Flow\GameFramework\Controllers\Controller.h" />
     <ClInclude Include="Source\Flow\GameFramework\Controllers\PlayerController.h" />
     <ClInclude Include="Source\Flow\GameFramework\Gameobject.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Level.h" />
     <ClInclude Include="Source\Flow\GameFramework\Other\Skybox.h" />
     <ClInclude Include="Source\Flow\GameFramework\World.h" />
-    <ClInclude Include="Source\Flow\GameFramework\WorldObject.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Actor.h" />
+    <ClInclude Include="Source\Flow\Helper\Archive.h" />
     <ClInclude Include="Source\Flow\Helper\BulletDebugDrawing.h" />
     <ClInclude Include="Source\Flow\Helper\HelperMacros.h" />
     <ClInclude Include="Source\Flow\Helper\Maths.h" />
@@ -312,13 +314,15 @@
     <ClCompile Include="Source\Flow\GameFramework\Components\RenderableComponent.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\StaticMeshComponent.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\WorldComponent.cpp" />
-    <ClCompile Include="Source\Flow\GameFramework\ControlledObject.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\Pawn.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Controllers\Controller.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Controllers\PlayerController.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Gameobject.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\Level.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Other\Skybox.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\World.cpp" />
-    <ClCompile Include="Source\Flow\GameFramework\WorldObject.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\Actor.cpp" />
+    <ClCompile Include="Source\Flow\Helper\Archive.cpp" />
     <ClCompile Include="Source\Flow\Helper\BulletDebugDrawing.cpp" />
     <ClCompile Include="Source\Flow\Helper\Profiling.cpp" />
     <ClCompile Include="Source\Flow\Helper\Timer.cpp" />
