--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -48,8 +48,13 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Bullet Physics Debug Colours]
-Pos=305,23
+Pos=611,90
 Size=261,572
+Collapsed=0
+
+[Window][Style Editor]
+Pos=458,99
+Size=339,856
 Collapsed=0
 
 [Docking][Data]
@@ -61,5 +66,5 @@ DockSpace       ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
     DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=254,721 Split=Y Selected=0xE884D536
       DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Selected=0xF02CD328
-  DockNode      ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,137 Selected=0x3F488DE8
+  DockNode      ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,137 Selected=0x24DDE09A
 
