Messing around with testing child windows. Havent figured out an ideal framework yet, can open windows but all render calls affect the main window. will revisit when i figure out a good framework.

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -122,6 +122,8 @@
     <ClInclude Include="Source\Flow\Editor\Inspector.h" />
     <ClInclude Include="Source\Flow\Editor\SelectionGizmo.h" />
     <ClInclude Include="Source\Flow\Editor\Toolbar.h" />
+    <ClInclude Include="Source\Flow\Editor\Windows\CollisionEditor.h" />
+    <ClInclude Include="Source\Flow\Editor\Windows\EditorWindow.h" />
     <ClInclude Include="Source\Flow\EntryPoint.h" />
     <ClInclude Include="Source\Flow\ErrorHandling\dxerr.h" />
     <ClInclude Include="Source\Flow\ErrorHandling\ErrorHelpers.h" />
@@ -299,6 +301,8 @@
     <ClCompile Include="Source\Flow\Editor\Inspector.cpp" />
     <ClCompile Include="Source\Flow\Editor\SelectionGizmo.cpp" />
     <ClCompile Include="Source\Flow\Editor\Toolbar.cpp" />
+    <ClCompile Include="Source\Flow\Editor\Windows\CollisionEditor.cpp" />
+    <ClCompile Include="Source\Flow\Editor\Windows\EditorWindow.cpp" />
     <ClCompile Include="Source\Flow\ErrorHandling\dxerr.cpp" />
     <ClCompile Include="Source\Flow\Events\ApplicationEvent.cpp" />
     <ClCompile Include="Source\Flow\Events\Event.cpp" />
