--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1280,721
+Size=1920,998
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -9,7 +9,7 @@ Collapsed=0
 
 [Window][Light]
 Pos=0,19
-Size=235,582
+Size=235,806
 Collapsed=0
 DockId=0x00000001,0
 
@@ -19,20 +19,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1026,299
-Size=254,302
+Pos=1539,406
+Size=381,419
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Heirarchy]
-Pos=1026,19
-Size=254,278
+Pos=1539,19
+Size=381,385
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=0,603
-Size=1280,137
+Pos=0,827
+Size=1920,190
 Collapsed=0
 DockId=0x00000007,1
 
@@ -42,8 +42,8 @@ Size=866,585
 Collapsed=0
 
 [Window][Asset System]
-Pos=0,603
-Size=1280,137
+Pos=0,827
+Size=1920,190
 Collapsed=0
 DockId=0x00000007,0
 
@@ -57,8 +57,13 @@ Pos=458,99
 Size=339,856
 Collapsed=0
 
+[Window][Collision Editor]
+Pos=417,66
+Size=556,510
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
+DockSpace       ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,998 Split=Y
   DockNode      ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,582 Split=X
     DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1024,721 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=235,721 Selected=0xAADB73F3
