First simple iteration of Chili's render queue system. Added 5 passes, dont actually need them all, but put different culling mode rendering into each pass Added working selection highlight Added onviewportselected/deselected editor callbacks Reworked my renderable interface to be less crap Added some constant buffer templates, though I should use the DCB stuff I reckon instead Added customisable colours for selection

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -181,6 +181,8 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\LayoutCodex.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Rasterizer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Sampler.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ScaledTransformConstantBuffer.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Shaders\NullPixelShader.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Shaders\PixelShader.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Shaders\VertexShader.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Stencil.h" />
@@ -197,6 +199,12 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Mesh\StaticMesh.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Renderable.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\RenderableBase.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\RenderQueue\Job.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\RenderQueue\Pass.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\RenderQueue\RenderQueue.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\RenderQueue\Step.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\RenderQueue\Technique.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\TemplateBuffers\TemplateBuffers.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\Vertex.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexElement.h" />
@@ -348,12 +356,14 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Blender.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicConstantBuffer.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ScaledTransformConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\TransformConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\IndexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\InputLayout.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\LayoutCodex.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Rasterizer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Sampler.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Shaders\NullPixelShader.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Shaders\PixelShader.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Shaders\VertexShader.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Stencil.cpp" />
@@ -366,6 +376,11 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Materials\Material.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Mesh\StaticMesh.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Renderable.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\RenderQueue\Job.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\RenderQueue\Pass.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\RenderQueue\RenderQueue.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\RenderQueue\Step.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\RenderQueue\Technique.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexElement.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexLayout.cpp" />
