--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1920,998
+Size=1280,721
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -9,7 +9,7 @@ Collapsed=0
 
 [Window][Light]
 Pos=0,19
-Size=239,806
+Size=239,586
 Collapsed=0
 DockId=0x00000001,0
 
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1539,344
-Size=381,481
+Pos=1026,254
+Size=254,351
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=0,827
-Size=1920,190
+Pos=0,607
+Size=1280,133
 Collapsed=0
 DockId=0x00000007,1
 
@@ -42,8 +42,8 @@ Size=866,585
 Collapsed=0
 
 [Window][Asset System]
-Pos=0,827
-Size=1920,190
+Pos=0,607
+Size=1280,133
 Collapsed=0
 DockId=0x00000007,0
 
@@ -63,14 +63,25 @@ Size=556,510
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=1539,19
-Size=381,323
+Pos=1026,19
+Size=254,233
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Rendering Configuration]
+Pos=0,607
+Size=1280,133
+Collapsed=0
+DockId=0x00000007,2
+
+[Window][Editor Settings]
+Pos=60,60
+Size=302,457
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,998 Split=Y
-  DockNode        ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,582 Split=X
+DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
+  DockNode        ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,586 Split=X
     DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1024,721 Split=X
       DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=239,721 Selected=0xAADB73F3
       DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=783,721 CentralNode=1
@@ -78,6 +89,6 @@ DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,998 Split=Y
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,233 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,347 Selected=0xF02CD328
-  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,137 Selected=0x3F488DE8
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,351 Selected=0xF02CD328
+  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,133 Selected=0x24DDE09A
 
