--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\Blender.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ConstantBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicConstantBuffer.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicShaderBuffers.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ShaderConstantBuffers.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\TransformConstantBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\IndexBuffer.h" />
@@ -357,6 +358,7 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Blender.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicConstantBuffer.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicShaderBuffers.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ScaledTransformConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\TransformConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\IndexBuffer.cpp" />
