--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,7 +9,7 @@ Collapsed=0
 
 [Window][Light]
 Pos=0,19
-Size=239,506
+Size=239,562
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1026,254
-Size=254,271
+Size=254,327
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=665,527
-Size=615,213
+Pos=665,583
+Size=615,157
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -42,8 +42,8 @@ Size=866,668
 Collapsed=0
 
 [Window][Asset System]
-Pos=665,527
-Size=615,213
+Pos=665,583
+Size=615,157
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=665,527
-Size=615,213
+Pos=665,583
+Size=615,157
 Collapsed=0
 DockId=0x0000000C,2
 
@@ -80,23 +80,23 @@ Size=302,457
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,527
-Size=663,213
+Pos=0,583
+Size=663,157
 Collapsed=0
 DockId=0x0000000B,0
 
 [Docking][Data]
 DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
-  DockNode        ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,701 Split=X
+  DockNode        ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,562 Split=X
     DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1024,721 Split=X
       DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=239,721 Selected=0xAADB73F3
       DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=783,721 CentralNode=1
     DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=254,721 Split=Y Selected=0xE884D536
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
-        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,323 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,376 Selected=0xF02CD328
-  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,295 Split=X Selected=0x24DDE09A
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,233 Selected=0x0A670937
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,327 Selected=0xF02CD328
+  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,157 Split=X Selected=0x24DDE09A
     DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=663,213 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=615,213 Selected=0x24DDE09A
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=615,213 Selected=0x3F488DE8
 
