--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexElement.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexLayout.h" />
     <ClInclude Include="Source\Flow\Rendering\DX11\DX11RenderAPI.h" />
+    <ClInclude Include="Source\Flow\Rendering\Other\FrameBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\RenderAPI.h" />
     <ClInclude Include="Source\Flow\Rendering\RenderCommand.h" />
     <ClInclude Include="Source\Flow\Rendering\Renderer.h" />
@@ -397,6 +398,7 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexElement.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexLayout.cpp" />
     <ClCompile Include="Source\Flow\Rendering\DX11\DX11RenderAPI.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Other\FrameBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\RenderAPI.cpp" />
     <ClCompile Include="Source\Flow\Rendering\RenderCommand.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Renderer.cpp" />
